[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdal-tiles-api"
description = "This API cuts out tiles from Cloud Optimized GeoTIFFs (COG) or other datasets using GDAL."
readme = "README.md"
keywords = [
  "GDAL",
  "tiles",
  "COG",
  "FastAPI",
]
license = {file = "LICENSE"}
authors = [
  {name = "Jochen Klar", email = "mail@jochenklar.de"},
]
requires-python = ">=3.11"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dynamic = [
  "version",
]
dependencies = [
  "deepmerge>=2",
  "fastapi[standard]",
  "GDAL>=3",
  "numpy>=11",
  "pillow>=11",
]

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "pytest",
    "ruff",
    "twine",
]

[project.urls]
repository = "https://github.com/codeforberlin/gdal-tiles-api.git"
issues = "https://github.com/codeforberlin/gdal-tiles-api/issues"

[tool.setuptools_scm]
version_file = "gdal_tiles_api/_version.py"

[tool.setuptools.packages.find]
include = ["gdal_tiles_api*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.ruff]
target-version = "py311"
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "B006",   # mutable-argument-default
    "B007",   # unused-loop-control-variable
    "B018",   # useless-expression
    "RUF012", # mutable-class-default
]

[tool.ruff.isort]
known-first-party = [
    "gdal_tiles_api"
]
section-order = [
    "future",
    "standard-library",
    "pytest",
    "fastapi",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.isort.sections]
pytest = ["pytest"]
fastapi = ["fastapi"]

[tool.pytest.ini_options]
testpaths = ["gdal_tiles_api/tests.py"]
